Fixed spacing issue on space walk mobile section

--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,7 @@ footer {
   .home .walk {
     flex-direction: column;
     padding: 15px;
+    margin-top: 20px;
   }
 }
 .home .walk .walk-text {
