--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,6 +56,7 @@
     @media @phone {
       flex-direction: column;
       padding: 15px;
+      margin-top: 20px;
     }
 
     .walk-text {
